WebCore:

2008-10-12  Dirk Schulze  <vbs85@gmx.de>

        Reviewed by Eric Seidel.

        - https://bugs.webkit.org/show_bug.cgi?id=20435

        Added exception codes to canvas gradients to match current specification.

        Tests: fast/canvas/gradient-addColorStop-with-invalid-color.html
               fast/canvas/linearGradient-infinite-values.html
               fast/canvas/radialGradient-infinite-values.html

        * html/CanvasGradient.cpp:
        (WebCore::CanvasGradient::addColorStop):
        * html/CanvasGradient.h:
        * html/CanvasGradient.idl:
        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::createLinearGradient):
        (WebCore::CanvasRenderingContext2D::createRadialGradient):
        * html/CanvasRenderingContext2D.h:
        * html/CanvasRenderingContext2D.idl:

LayoutTests:

2008-10-12  Dirk Schulze  <vbs85@gmx.de>

        Reviewed by Eric Seidel.

        - test for https://bugs.webkit.org/show_bug.cgi?id=20435

        Added new tests to check behavior of canvas gradients to infinite values
        or invalid colors.

        * fast/canvas/gradient-addColorStop-with-invalid-color-expected.txt: Added.
        * fast/canvas/gradient-addColorStop-with-invalid-color.html: Added.
        * fast/canvas/linearGradient-infinite-values-expected.txt: Added.
        * fast/canvas/linearGradient-infinite-values.html: Added.
        * fast/canvas/radialGradient-infinite-values-expected.txt: Added.
        * fast/canvas/radialGradient-infinite-values.html: Added.
        * fast/canvas/resources/gradient-addColorStop-with-invalid-color.js: Added.
        * fast/canvas/resources/linearGradient-infinite-values.js: Added.
        * fast/canvas/resources/radialGradient-infinite-values.js: Added.



Canonical link: https://commits.webkit.org/29781@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37538 268f45cc-cd09-0410-ab3c-d52691b4dbfc